# ergo

./: .gitignore  .markdownlint-cli2.jsonc  .markdownlintignore  AGENTS.md  Cargo.toml  INTEGRATION_PLAN.md  LICENSE-APACHE  LICENSE-MIT  README.md  REFACTOR_STATUS.md  capture.json  crate_refactor.md  dual_ma_fixture.jsonl  ergo_status_doc.js  ergo_status_report.docx  test_bad_wire_2.yaml  verify_runtime_surface.sh
.agents/: COLLABORATION_PROTOCOLS.md
.agents/.claude/: CLAUDE.MD
.agents/.codex/: CODEX_PROTOCOL.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: config.yml  doctrine-gap.md  v1-proposal.md
.github/workflows/: runtime-surface.yml
crates/ergo-cli/: Cargo.toml
crates/ergo-cli/src/: adapter_manifest_io.rs  csv_fixture.rs  error_format.rs  fixture_ops.rs  gen_docs.rs  graph_to_dot.rs  graph_yaml.rs  lib.rs  main.rs  validate.rs
crates/ergo-cli/tests/: fixture_graph_stress.rs  phase7_cli.rs
crates/ergo-host/: Cargo.toml
crates/kernel/: CODE_MAP.md
crates/kernel/adapter/: Cargo.toml  README.md
crates/kernel/adapter/src/: capture.rs  common.rs  composition.rs  errors.rs  event_binding.rs  fixture.rs  lib.rs  manifest.rs  provenance.rs  provides.rs  registry.rs  schema_materialization.rs  tests.rs  validate.rs
crates/kernel/adapter/src/host/: buffering_invoker.rs  coverage.rs  effects.rs
crates/kernel/adapter/tests/: composition_tests.rs  event_binding_tests.rs  fixture_stress.rs  validation.rs
crates/kernel/supervisor/: Cargo.toml  README.md
crates/kernel/supervisor/src/: capture.rs  fixture_runner.rs  lib.rs  replay.rs
crates/kernel/supervisor/src/capture/: tests.rs
crates/kernel/supervisor/src/demo/: demo_1.rs
crates/kernel/supervisor/src/replay/: tests.rs
crates/kernel/supervisor/tests/: integration.rs  replay_harness.rs
crates/kernel/supervisor/tests/data/: capture_v3_sample.json
crates/kernel/supervisor/tests/support/: demo_1.rs  mod.rs
crates/prod/: CODE_MAP.md
crates/prod/clients/cli/: Cargo.toml  README.md
crates/prod/clients/cli/src/: csv_fixture.rs  error_format.rs  exit_codes.rs  fixture_ops.rs  gen_docs.rs  graph_to_dot.rs  graph_yaml.rs  init_project.rs  lib.rs  main.rs  render.rs  tests.rs  validate.rs
crates/prod/clients/cli/src/cli/: args.rs  dispatch.rs  handlers.rs  mod.rs
crates/prod/clients/cli/src/cli/dispatch/: tests.rs
crates/prod/clients/cli/src/fixture_ops/: tests.rs
crates/prod/clients/cli/src/graph_to_dot/: tests.rs
crates/prod/clients/cli/src/graph_yaml/: tests.rs
crates/prod/clients/cli/src/init_project/: tests.rs
crates/prod/clients/cli/src/output/: errors.rs  json.rs  mod.rs  text.rs
crates/prod/clients/cli/tests/: fixture_binary_smoke.rs  fixture_graph_stress.rs  graph_binary_smoke.rs  phase7_cli.rs
crates/prod/clients/cli/tests/support/: mod.rs
crates/prod/clients/sdk-rust/: Cargo.toml  README.md
crates/prod/clients/sdk-rust/src/: error.rs  lib.rs  tests.rs
crates/prod/clients/sdk-rust/tests/: egress_exports.rs
crates/prod/core/host/: Cargo.toml  README.md
crates/prod/core/host/src/: capture_enrichment.rs  demo_fixture_usecase.rs  diagnostics.rs  error.rs  expand_diagnostics.rs  gen_docs_usecase.rs  graph_dot_usecase.rs  lib.rs  manifest_usecases.rs  protocol.rs  replay.rs  replay_error_surface.rs  runner.rs  usecases.rs
crates/prod/core/host/src/capture_enrichment/: tests.rs
crates/prod/core/host/src/egress/: config.rs  mod.rs  process.rs  validation.rs
crates/prod/core/host/src/egress/config/: tests.rs
crates/prod/core/host/src/egress/process/: tests.rs
crates/prod/core/host/src/egress/validation/: tests.rs
crates/prod/core/host/src/error/: tests.rs
crates/prod/core/host/src/graph_dot_usecase/: tests.rs
crates/prod/core/host/src/host/: buffering_invoker.rs  context_store.rs  coverage.rs  effects.rs  mod.rs
crates/prod/core/host/src/host/buffering_invoker/: tests.rs
crates/prod/core/host/src/host/coverage/: tests.rs
crates/prod/core/host/src/host/effects/: tests.rs
crates/prod/core/host/src/manifest_usecases/: action.rs  common.rs  compute.rs  source.rs  tests.rs  trigger.rs
crates/prod/core/host/src/replay/: tests.rs
crates/prod/core/host/src/replay_error_surface/: tests.rs
crates/prod/core/host/src/runner/: tests.rs
crates/prod/core/host/src/usecases/: live_prep.rs  live_run.rs  node_analysis.rs  process_driver.rs  shared.rs
crates/prod/core/host/src/usecases/process_driver/: tests.rs
crates/prod/core/host/src/usecases/tests/: contract.rs  live_prep.rs  live_run.rs  mod.rs  process_driver.rs
crates/prod/core/loader/: Cargo.toml  README.md
crates/prod/core/loader/src/: discovery.rs  in_memory.rs  io.rs  lib.rs  project.rs  resolver.rs
crates/prod/core/loader/src/decode/: authoring_graph.rs  json_graph.rs  mod.rs  yaml_graph.rs
crates/prod/core/loader/src/discovery/: tests.rs
crates/prod/core/loader/src/project/: tests.rs
crates/prod/core/loader/tests/: loader_api.rs
crates/prod/shared/duration/: Cargo.toml  README.md
crates/prod/shared/duration/src/: lib.rs  tests.rs
crates/reference-client/: package-lock.json  package.json
crates/runtime/: Cargo.toml  README.md
crates/shared/fixtures/: Cargo.toml  README.md
crates/shared/fixtures/src/: csv.rs  lib.rs  report.rs
crates/shared/fixtures/src/report/: tests.rs
crates/supervisor/: Cargo.toml  cargo.toml
crates/ui-authoring/: package-lock.json  tsconfig.json
docs/: EXTENSION_CONTRACTS_ROADMAP.md  INDEX.md  INTERNAL_CATCH_ALL_BRIEFING.docx  README.md  closure_register.md
docs/CANONICAL/: KERNEL_CLOSURE.md  PHASE_INVARIANTS.md  TERMINOLOGY.md
docs/CONTRACTS/: INDEX.md  UI_RUNTIME_CONTRACT.md
docs/FROZEN/: SUPERVISOR.md  V0_FREEZE.md  adapter_contract.md  execution_model.md  ontology.md
docs/STABLE/: AUTHORING_LAYER.md  CLUSTER_SPEC.md  RULE_REGISTRY.md  (+1 more)
docs_legacy/: INDEX.md  closure_register.md
fixtures/: demo_1.jsonl  demo_2.jsonl
tools/: gen_docs.rs  migrate_graph_versions.py  verify_code_map_drift.sh  verify_doctrine_gate.sh  verify_invariant_index.sh  verify_layer_boundaries.sh  verify_replay_naming.sh  verify_runtime_surface.sh
(+409 files in other folders)
