[workspace]
resolver = "2"

members = [
    "crates/runtime",
    "crates/adapter",
    "crates/supervisor",
    "crates/ergo-host",
    "crates/ergo-cli",
]

# UI is intentionally excluded (non-Rust)
exclude = [
    "crates/reference-client",
]

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/<your-org>/ergo"
