[workspace]
resolver = "2"

members = [
    "crates/kernel/runtime",
    "crates/kernel/adapter",
    "crates/kernel/supervisor",
    "crates/prod/core/host",
    "crates/prod/core/loader",
    "crates/prod/clients/cli",
    "crates/prod/clients/sdk-rust",
    "crates/prod/clients/sdk-types",
    "crates/shared/test-support",
    "crates/shared/fixtures",
]

# UI is intentionally excluded (non-Rust)
exclude = [
    "crates/reference-client",
]

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/<your-org>/ergo"
