[package]
name = "ergo-cli"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[[bin]]
name = "ergo"
path = "src/main.rs"

[dependencies]
ergo-adapter = { path = "../adapter" }
ergo-runtime = { path = "../runtime" }
ergo-supervisor = { path = "../supervisor", features = ["demo"] }
ergo-host = { path = "../ergo-host" }
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
semver = "1.0"
