[package]
name = "ergo-adapter"
version = "0.1.0-alpha.1"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Kernel adapter surface for manifests, event binding, composition checks, and capture helpers in Ergo"
repository.workspace = true

[dependencies]
ergo-runtime = { path = "../runtime", version = "0.1.0-alpha.1" }
jsonschema = "0.40.0"
regex = "1.10"
semver = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
hex = "0.4"
