[package]
name = "ergo-supervisor"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Kernel supervisor for deterministic execution, capture, and replay in the Ergo graph engine"
repository.workspace = true

[dependencies]
ergo-adapter = { path = "../adapter", version = "0.1.0" }
ergo-runtime = { path = "../runtime", version = "0.1.0" }
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
