[package]
name = "ergo-fixtures"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Fixture conversion, inspection, and validation helpers for Ergo capture artifacts"
repository.workspace = true

[dependencies]
ergo-adapter = { path = "../../kernel/adapter", version = "0.1.0" }
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
