[package]
name = "ergo-fixtures"
version = "0.1.0-alpha.1"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Fixture conversion, inspection, and validation helpers for Ergo capture artifacts"
homepage.workspace = true
repository.workspace = true
readme = "README.md"
keywords = ["ergo", "fixtures", "capture", "jsonl", "csv"]
categories = ["development-tools", "command-line-utilities", "parser-implementations"]

[dependencies]
ergo-adapter = { path = "../../kernel/adapter", version = "0.1.0-alpha.1" }
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
