[package]
name = "ergo-cli"
version = "0.1.0-alpha.1"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Command-line interface for the Ergo deterministic graph execution engine"
homepage.workspace = true
repository.workspace = true
readme = "README.md"
keywords = ["ergo", "cli", "workflow", "replay", "graph"]
categories = ["command-line-utilities", "development-tools", "visualization"]

[[bin]]
name = "ergo"
path = "src/main.rs"

[dependencies]
ergo-host = { path = "../../core/host", version = "0.1.0-alpha.1" }
ergo-fixtures = { path = "../../../shared/fixtures", version = "0.1.0-alpha.1" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

[dev-dependencies]
ergo-adapter = { path = "../../../kernel/adapter", version = "0.1.0-alpha.1" }
ergo-runtime = { path = "../../../kernel/runtime", version = "0.1.0-alpha.1" }
ergo-supervisor = { path = "../../../kernel/supervisor", version = "0.1.0-alpha.1" }
