[package]
name = "ergo-sdk-rust"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Rust SDK for embedding the Ergo deterministic graph execution engine"
repository.workspace = true

[dependencies]
ergo-adapter = { path = "../../../kernel/adapter", version = "0.1.0" }
ergo-host = { path = "../../core/host", version = "0.1.0" }
ergo-loader = { path = "../../core/loader", version = "0.1.0" }
ergo-runtime = { path = "../../../kernel/runtime", version = "0.1.0" }
serde_json = "1.0"
serde_yaml = "0.9"
