[package]
name = "ergo-host"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
ergo-adapter = { path = "../../../kernel/adapter" }
ergo-runtime = { path = "../../../kernel/runtime" }
ergo-supervisor = { path = "../../../kernel/supervisor", features = ["demo"] }
ergo-loader = { path = "../loader" }
ergo-prod-duration = { path = "../../shared/duration" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"
sha2 = "0.10"
hex = "0.4"
libc = "0.2"
