[package]
name = "ergo-host"
version = "0.1.0-alpha.1"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Production host orchestration layer for the Ergo deterministic graph execution engine"
repository.workspace = true

[dependencies]
ergo-adapter = { path = "../../../kernel/adapter", version = "0.1.0-alpha.1" }
ergo-runtime = { path = "../../../kernel/runtime", version = "0.1.0-alpha.1" }
ergo-supervisor = { path = "../../../kernel/supervisor", version = "0.1.0-alpha.1" }
ergo-loader = { path = "../loader", version = "0.1.0-alpha.1" }
ergo-prod-duration = { path = "../../shared/duration", version = "0.1.0-alpha.1" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"
sha2 = "0.10"
hex = "0.4"
libc = "0.2"
