[package]
name = "ergo-loader"
version = "0.1.0-alpha.1"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Project discovery, graph decode, and source loading for the Ergo graph execution engine"
homepage.workspace = true
repository.workspace = true
readme = "README.md"
keywords = ["ergo", "loader", "graph", "project", "yaml"]
categories = ["development-tools", "config", "parser-implementations", "filesystem"]

[dependencies]
ergo-runtime = { path = "../../../kernel/runtime", version = "0.1.0-alpha.1" }
ergo-prod-duration = { path = "../../shared/duration", version = "0.1.0-alpha.1" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
semver = "1.0"
toml = "0.8"
